﻿4.0.27.alpha.1 - 25th September 2024
- PTR (4.4.1): Game API updates.

4.0.25 - 18th September 2024
- PTR (4.4.1): Game API updates.

4.0.24 - 11th September 2024
- Game API updates.
- PTR (4.4.1): Preliminary updates for game version 4.4.1.

4.0.21 - 21st August 2024
- Moved the Orb of Translocation icon to the correct location on the Tirisfal Glades map.

4.0.15 - 10th July 2024
- Fixed an issue which caused the map to be movable even when 'Unlock map frame' is disabled.
- Fixed a situational issue which could cause a Lua error while moving the map.

4.0.12 - 19th June 2024
- For 'Show zone levels', the zone levels have been updated.

4.0.09 - 29th May 2024
- If 'Use default map' is enabled, map zoom will not be remembered when you close and open the map.

4.0.08 - 22nd May 2024
- The 'Remember zoom level' functionality is now built into the addon (always enabled) so the option has been removed.
- Fixed an issue which caused the zoom level to be reset following certain actions (such as accepting a quest).

4.0.05 - 8th May 2024
- Updated dungeon icons.
- Added ability to toggle the main panel by clicking the slash command logo in the interface options panel.

4.0.04 - 29th April 2024
- Updated deprecated functions.

4.0.03 - 27th April 2024
- Added a new 'Show digsites' option.

4.0.02 - 26th April 2024
- Cataclysm Classic Beta: Code updates.

4.0.00 - 24th April 2024
- Welcome to Cataclysm Classic.
- Map reveal data, flight points, zone levels and dungeon levels have been updated.
- Added 'The Maelstrom' to the map dropdown menu.
- The 'Show zone crossings' and 'Show fishing skill levels' options have been removed.
- This release and future releases will only work with Cataclysm Classic (not Wrath of the Lich King Classic).

3.0.190 - 19th April 2024
- Cataclysm Classic Beta: You can now enable 'Show points of interest' to see dungeons, raids and flight points.
- Cataclysm Classic Beta: Added 'The Maelstrom' map dropdown menu.