@@ -1,5 +1,6 @@
 ﻿4.0.27.alpha.1 - 25th September 2024
 - PTR (4.4.1): Game API updates.
+- PTR (4.4.1): The 'Use default map' option is currently unavailable due to a bug in the game code which affects map movement.
 
 4.0.25 - 18th September 2024
 - PTR (4.4.1): Game API updates.
